--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="SPA - VidaSants">
+    <link rel="preload" as="image" href="./src/img/banner1.PNG" />
     <link rel="stylesheet" type="text/css" href="./src/styles/index.css">
     <link rel="stylesheet" type="text/css" href="./src/styles/menu.css">
     <link rel="stylesheet" type="text/css" href="./src/styles/slide.css">
