--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./src/styles/index.css">
-    <link rel="stylesheet" type="text/css" href="./src/styles/menu.css">
-    <link rel="stylesheet" type="text/css" href="./src/styles/slide.css">
-    <link rel="stylesheet" type="text/css" href="./src/styles/card.css">
-    <title>SPA - VidaSants</title>
+    <meta name="description" content="Documetação">
+    <link  href="./src/index.css" rel="stylesheet"> 
+    <title></title>
+    <style></style>
 </head>
 <body>
-    <div id="app"></div>
-    <script id="root" type="module" src="./src/main.js"></script>
+ <div id="app"></div>  
+ <script type="module" src="/src/main.js"> </script>
 </body>
 </html>
