--- a/index.html
+++ b/index.html
@@ -1,17 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./src/styles/index.css">
-    <link rel="stylesheet" type="text/css" href="./src/styles/menu.css">
-    <link rel="stylesheet" type="text/css" href="./src/styles/slide.css">
-    <link rel="stylesheet" type="text/css" href="./src/styles/card.css">
-    <title>SPA - VidaSants</title>
-</head>
-<body>
-    <div id="app"></div>
-    <script id="root" type="module" src="./src/main.js"></script>
-</body>
+    <head>
+        <title>SpaVidaSants</title>
+        <meta name="description" content="Description..." />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="theme-color" content="#9c6799" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+        <meta name="google" content="notranslate" />
+
+        <!-- Open Graph -->
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="SpaVidaSants" />
+        <meta property="og:description" content="Description..." />
+        <meta property="og:site_name" content="SpaVidaSants" />
+        <meta property="og:url" content="https://spavidasants.com" />
+        <meta property="og:image" content="" />
+
+        <link rel="preload" href="/manifest.json" />
+        <link rel="manifest" href="/manifest.json" />
+        <link rel="stylesheet" href="/css/native-like-experience.css" />      
+        <link href="./src/styles/@main.css" rel="stylesheet">
+        <link href="./src/styles/componete/@slide.css" rel="stylesheet">
+        <link href="./src/styles/componete/@newsletter.css" rel="stylesheet">
+        <link href="./src/styles/@produtos.css" rel="stylesheet">
+        <link href="./src/styles/componete/@menu.css" rel="stylesheet">
+        <link href="./src/styles/componete/@colaboradores.css" rel="stylesheet">
+
+        <!-- Apple touch icon -->
+        <link rel="apple-touch-icon" sizes="120x120" href="/icons/apple-touch-icon_120.png" />
+        <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon_180.png" />
+    </head>
+    <div id="app"></div>  
+    <script type="module" src="/src/main.js"> </script>
+    <body>
+       
+
+        <script>
+            if ("serviceWorker" in navigator) {
+                window.addEventListener("load", function () {
+                    navigator.serviceWorker
+                        .register("/serviceWorker.js")
+                        .then((registration) => {
+                            console.log("SW registration successful");
+                        });
+                });
+            }
+        </script>
+    </body>
 </html>
